<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Factura"
        android:textSize="@dimen/big_textSize"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_text"/>
    <TextView
        android:id="@+id/tv_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_text"/>

    <TextView
        android:id="@+id/tv_contador_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_del_producto_text"/>

    <TextView
        android:layout_gravity="center"
        android:padding="@dimen/padding_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_del_producto"
        android:textSize="@dimen/big_textSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/producto1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:padding="@dimen/padding_main"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 1"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Producto 3"/>
            <TextView
                android:id="@+id/tv_cont_producto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/producto4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 4"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 5"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 6"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/producto7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 7"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 8"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/producto9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_normal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_main">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 9"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_cont_producto9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_share"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"/>

</LinearLayout>